--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
 agent {
     docker {
-        image 'maven:3.9.1-openjdk-17'
+        image 'maven:3.9.1-eclipse-temurin-17'
         args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
     }
 }
