--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,39 +1,29 @@
 pipeline {
     agent {
         docker {
-            // Use Maven image with OpenJDK 17
             image 'maven:3.9.1-eclipse-temurin-17'
             args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
-
     environment {
-        // Set JAVA_HOME inside the container
-        JAVA_HOME = '/usr/local/openjdk-17'
-        PATH = "${JAVA_HOME}/bin:${env.PATH}"
         SONAR_URL = "http://16.170.233.220:9000"
-        GIT_USER_NAME = "iam-veeramalla"
-        GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
     }
-
     stages {
-
         stage('Checkout') {
             steps {
-                checkout([$class: 'GitSCM',
-                          branches: [[name: 'main']],
-                          userRemoteConfigs: [[
-                              url: 'https://github.com/eklavya2117/Jenkins-CICD-Pipeline.git'
-                          ]]
-                ])
-                sh 'echo "Checkout completed"'
+                echo "Checkout started"
+                git branch: 'main', url: 'https://github.com/eklavya2117/Jenkins-CICD-Pipeline.git'
             }
         }
 
         stage('Build and Test') {
             steps {
                 dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                    sh 'mvn clean package'
+                    sh '''
+                        export JAVA_HOME=/usr/local/openjdk-17
+                        export PATH=$JAVA_HOME/bin:$PATH
+                        mvn clean package
+                    '''
                 }
             }
         }
@@ -42,7 +32,11 @@ pipeline {
             steps {
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                     dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                        sh "mvn sonar:sonar -Dsonar.host.url=${SONAR_URL} -Dsonar.login=${SONAR_AUTH_TOKEN}"
+                        sh '''
+                            export JAVA_HOME=/usr/local/openjdk-17
+                            export PATH=$JAVA_HOME/bin:$PATH
+                            mvn sonar:sonar -Dsonar.host.url=${SONAR_URL} -Dsonar.login=${SONAR_AUTH_TOKEN}
+                        '''
                     }
                 }
             }
@@ -51,14 +45,15 @@ pipeline {
         stage('Build and Push Docker Image') {
             environment {
                 DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
+                REGISTRY_CREDENTIALS = credentials('docker-cred')
             }
             steps {
                 dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                    sh "docker build -t ${DOCKER_IMAGE} ."
                     script {
-                        def image = docker.image("${DOCKER_IMAGE}")
-                        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                            image.push()
+                        sh "docker build -t ${DOCKER_IMAGE} ."
+                        def dockerImage = docker.image("${DOCKER_IMAGE}")
+                        docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                            dockerImage.push()
                         }
                     }
                 }
@@ -66,6 +61,10 @@ pipeline {
         }
 
         stage('Update Deployment File') {
+            environment {
+                GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
+                GIT_USER_NAME = "iam-veeramalla"
+            }
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
@@ -74,7 +73,7 @@ pipeline {
                         BUILD_NUMBER=${BUILD_NUMBER}
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                         git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git commit -m "Update deployment image to version ${BUILD_NUMBER}" || echo "No changes to commit"
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                         git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                     '''
                 }
@@ -83,14 +82,11 @@ pipeline {
     }
 
     post {
-        always {
-            echo "Pipeline finished!"
-        }
         success {
-            echo "Pipeline completed successfully!"
+            echo 'Pipeline finished successfully!'
         }
         failure {
-            echo "Pipeline failed!"
+            echo 'Pipeline failed!'
         }
     }
 }
