--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,13 +1,17 @@
 pipeline {
     agent {
         docker {
+            // Use an official Maven image with Java 17 already installed
             image 'maven:3.9.1-eclipse-temurin-17'
             args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
+
     environment {
         SONAR_URL = "http://16.170.233.220:9000"
+        DOCKER_REGISTRY = "eklavya2117"
     }
+
     stages {
         stage('Checkout') {
             steps {
@@ -19,11 +23,7 @@ pipeline {
         stage('Build and Test') {
             steps {
                 dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                    sh '''
-                        export JAVA_HOME=/usr/local/openjdk-17
-                        export PATH=$JAVA_HOME/bin:$PATH
-                        mvn clean package
-                    '''
+                    sh 'mvn clean package'
                 }
             }
         }
@@ -32,11 +32,7 @@ pipeline {
             steps {
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
                     dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                        sh '''
-                            export JAVA_HOME=/usr/local/openjdk-17
-                            export PATH=$JAVA_HOME/bin:$PATH
-                            mvn sonar:sonar -Dsonar.host.url=${SONAR_URL} -Dsonar.login=${SONAR_AUTH_TOKEN}
-                        '''
+                        sh "mvn sonar:sonar -Dsonar.host.url=${SONAR_URL} -Dsonar.login=${SONAR_AUTH_TOKEN}"
                     }
                 }
             }
@@ -44,15 +40,14 @@ pipeline {
 
         stage('Build and Push Docker Image') {
             environment {
-                DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
-                REGISTRY_CREDENTIALS = credentials('docker-cred')
+                DOCKER_IMAGE = "${DOCKER_REGISTRY}/ultimate-cicd:${BUILD_NUMBER}"
             }
             steps {
                 dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
                     script {
                         sh "docker build -t ${DOCKER_IMAGE} ."
                         def dockerImage = docker.image("${DOCKER_IMAGE}")
-                        docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
                             dockerImage.push()
                         }
                     }
@@ -70,7 +65,6 @@ pipeline {
                     sh '''
                         git config user.email "chauhan.pravin.7112@gmail.com"
                         git config user.name "eklavya2117"
-                        BUILD_NUMBER=${BUILD_NUMBER}
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                         git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                         git commit -m "Update deployment image to version ${BUILD_NUMBER}"
@@ -82,11 +76,7 @@ pipeline {
     }
 
     post {
-        success {
-            echo 'Pipeline finished successfully!'
-        }
-        failure {
-            echo 'Pipeline failed!'
-        }
+        success { echo 'Pipeline finished successfully!' }
+        failure { echo 'Pipeline failed!' }
     }
 }
