--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,38 +1,42 @@
 pipeline {
-    agent {
-        docker {
-            // Use an official Maven image with Java 17 already installed
-            image 'maven:3.9.1-eclipse-temurin-17'
-            args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-        }
-    }
-
+    agent any
     environment {
+        // Docker and Sonar credentials are pulled from Jenkins credentials
         SONAR_URL = "http://16.170.233.220:9000"
-        DOCKER_REGISTRY = "eklavya2117"
     }
 
     stages {
+
         stage('Checkout') {
             steps {
                 echo "Checkout started"
-                git branch: 'main', url: 'https://github.com/eklavya2117/Jenkins-CICD-Pipeline.git'
+                git branch: 'main',
+                    url: 'https://github.com/eklavya2117/Jenkins-CICD-Pipeline.git',
+                    credentialsId: 'github' // your GitHub token credential ID
             }
         }
 
         stage('Build and Test') {
             steps {
                 dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                    sh 'mvn clean package'
+                    script {
+                        // Run Maven in a container
+                        docker.image('maven:3.9.1-eclipse-temurin-17').inside('--rm') {
+                            sh 'mvn clean package'
+                        }
+                    }
                 }
             }
         }
 
         stage('Static Code Analysis') {
             steps {
-                withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                    dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                        sh "mvn sonar:sonar -Dsonar.host.url=${SONAR_URL} -Dsonar.login=${SONAR_AUTH_TOKEN}"
+                dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
+                    withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+                        sh """
+                        docker run --rm -v \$PWD:/app -w /app maven:3.9.1-eclipse-temurin-17 \
+                        mvn sonar:sonar -Dsonar.login=${SONAR_AUTH_TOKEN} -Dsonar.host.url=${SONAR_URL}
+                        """
                     }
                 }
             }
@@ -40,15 +44,15 @@ pipeline {
 
         stage('Build and Push Docker Image') {
             environment {
-                DOCKER_IMAGE = "${DOCKER_REGISTRY}/ultimate-cicd:${BUILD_NUMBER}"
+                DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
             }
             steps {
                 dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
                     script {
+                        // Docker build/push happens on Jenkins host
                         sh "docker build -t ${DOCKER_IMAGE} ."
-                        def dockerImage = docker.image("${DOCKER_IMAGE}")
                         docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                            dockerImage.push()
+                            sh "docker push ${DOCKER_IMAGE}"
                         }
                     }
                 }
@@ -62,21 +66,25 @@ pipeline {
             }
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                    sh '''
-                        git config user.email "chauhan.pravin.7112@gmail.com"
-                        git config user.name "eklavya2117"
-                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                    '''
+                    sh """
+                    git config user.email "chauhan.pravin.7112@gmail.com"
+                    git config user.name "eklavya2117"
+                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    """
                 }
             }
         }
     }
 
     post {
-        success { echo 'Pipeline finished successfully!' }
-        failure { echo 'Pipeline failed!' }
+        success {
+            echo "Pipeline completed successfully!"
+        }
+        failure {
+            echo "Pipeline failed!"
+        }
     }
 }
