--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,18 +1,19 @@
 pipeline {
     agent any
+
     environment {
-        // Docker and Sonar credentials are pulled from Jenkins credentials
-        SONAR_URL = "http://16.170.233.220:9000"
+        DOCKER_IMAGE = "eklavya2117/ultimate-cicd:12"
+        MAVEN_IMAGE = "maven:3.9.1-eclipse-temurin-17"
+        JAVA_HOME = "/usr/local/openjdk-17"
+        PATH = "$JAVA_HOME/bin:$PATH"
     }
 
     stages {
 
-        stage('Checkout') {
+        stage('Checkout SCM') {
             steps {
-                echo "Checkout started"
-                git branch: 'main',
-                    url: 'https://github.com/eklavya2117/Jenkins-CICD-Pipeline.git',
-                    credentialsId: 'github' // your GitHub token credential ID
+                echo "Checking out code..."
+                checkout scm
             }
         }
 
@@ -20,9 +21,10 @@ pipeline {
             steps {
                 dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
                     script {
-                        // Run Maven in a container
-                        docker.image('maven:3.9.1-eclipse-temurin-17').inside('--rm') {
-                            sh 'mvn clean package'
+                        // Run Maven in Docker container with Jenkins user
+                        docker.image(MAVEN_IMAGE).inside("--rm -u 111:113") {
+                            sh 'rm -rf target || true' // Clean previous build artifacts
+                            sh 'mvn clean -Dmaven.clean.failOnError=false package'
                         }
                     }
                 }
@@ -30,58 +32,44 @@ pipeline {
         }
 
         stage('Static Code Analysis') {
-            steps {
-                dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                    withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-                        sh """
-                        docker run --rm -v \$PWD:/app -w /app maven:3.9.1-eclipse-temurin-17 \
-                        mvn sonar:sonar -Dsonar.login=${SONAR_AUTH_TOKEN} -Dsonar.host.url=${SONAR_URL}
-                        """
-                    }
-                }
-            }
-        }
-
-        stage('Build and Push Docker Image') {
-            environment {
-                DOCKER_IMAGE = "eklavya2117/ultimate-cicd:${BUILD_NUMBER}"
+            when {
+                expression { return fileExists('sonar-project.properties') }
             }
             steps {
                 dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
                     script {
-                        // Docker build/push happens on Jenkins host
-                        sh "docker build -t ${DOCKER_IMAGE} ."
-                        docker.withRegistry('https://index.docker.io/v1/', 'docker-cred') {
-                            sh "docker push ${DOCKER_IMAGE}"
+                        docker.image(MAVEN_IMAGE).inside("--rm -u 111:113") {
+                            sh 'mvn sonar:sonar'
                         }
                     }
                 }
             }
         }
 
-        stage('Update Deployment File') {
-            environment {
-                GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
-                GIT_USER_NAME = "iam-veeramalla"
-            }
+        stage('Build and Push Docker Image') {
             steps {
-                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                    sh """
-                    git config user.email "chauhan.pravin.7112@gmail.com"
-                    git config user.name "eklavya2117"
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                    """
+                dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
+                    script {
+                        // Use host Docker to build and push
+                        sh "docker build -t ${DOCKER_IMAGE} ."
+                        sh "docker push ${DOCKER_IMAGE}"
+                    }
                 }
+            }
+        }
+
+        stage('Update Deployment File') {
+            steps {
+                echo "Update your Kubernetes deployment YAML or Helm charts here..."
+                // Example:
+                // sh "sed -i 's|image: .*|image: ${DOCKER_IMAGE}|' k8s/deployment.yaml"
             }
         }
     }
 
     post {
         success {
-            echo "Pipeline completed successfully!"
+            echo "Pipeline succeeded!"
         }
         failure {
             echo "Pipeline failed!"
