--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,10 +1,10 @@
 pipeline {
-  agent {
-    docker {
-      image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
+agent {
+  docker {
+    image 'maven:3.9.6-eclipse-temurin-17'
+    reuseNode true
   }
+}
   stages {
     stage('Checkout') {
       steps {
@@ -13,12 +13,14 @@ pipeline {
       }
     }
     stage('Build and Test') {
-      steps {
-        sh 'ls -ltr'
-        // build the project and create a JAR file
-        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
-      }
-    }
+steps {
+    sh '''
+      cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+      rm -rf target || true
+      mvn clean package
+    '''
+  }
+}
     stage('Static Code Analysis') {
       environment {
         SONAR_URL = "http://16.170.233.220:9000"
