--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -53,23 +53,26 @@ steps {
       }
     }
     stage('Update Deployment File') {
-        environment {
-            GIT_REPO_NAME = "Jenkins-CICD-Pipeline"
-            GIT_USER_NAME = "eklavya2117"
-        }
-        steps {
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                sh '''
-                    git config user.email "chauhan.pravin.7112@gmail.com"
-                    git config user.name "eklavya2117"
-                    BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                '''
+    environment {
+        GIT_REPO_NAME = "Jenkins-CICD-Pipeline"
+        GIT_USER_NAME = "eklavya2117"
+    }
+    steps {
+        docker.image('maven:3.9.6-eclipse-temurin-17').inside(
+            '-v /var/lib/jenkins/workspace/mycicdpipeline:/var/lib/jenkins/workspace/mycicdpipeline'
+        ) {
+            dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                        git config user.email "chauhan.pravin.7112@gmail.com"
+                        git config user.name "eklavya2117"
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" ../spring-boot-app-manifests/deployment.yml
+                        git add ../spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    '''
+                }
             }
         }
     }
-  }
 }
