--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -7,13 +7,12 @@ agent {
   }
 }
   stages {
-    stage('Checkout') {
-      steps {
-        sh 'echo passed'
-        git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
-      }
-    }
-    stage('Build and Test') {
+stage('Checkout') {
+  steps {
+    checkout scm
+  }
+}
+Stage('Build and Test') {
 steps {
     sh '''
 
